Correct spacing and expired good format
Dates rendered in vertical column, expired items automatically have prefix Expired .

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -173,6 +173,7 @@
   border-radius: 50px;
   padding: 50px;
   letter-spacing: 0.06rem;
+  width: 30%;
 }
 
 .item-list h1{
@@ -207,6 +208,11 @@
 .item {
   margin: 6px;
 }
+
+.item-name {
+  width: 35rem;
+}
+
 .item-list button{
   letter-spacing: 0.06rem;
 }
